website/versioned_docs/version-2.0.x/reference/subsystems/ipython.mdx
---
title: ipython
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The IPython enhanced REPL (https://ipython.org/).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[ipython]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--ipython-version=<str>`}
  env_repr="PANTS_IPYTHON_VERSION"
  default_repr={`ipython==7.16.1`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--ipython-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_IPYTHON_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `entry_point`

<Option
  cli_repr={`--ipython-entry-point=<str>`}
  env_repr="PANTS_IPYTHON_ENTRY_POINT"
  default_repr={`IPython:start_ipython`}
>
  The main module for the tool. Usually, you will not want to change this from
  the default.
</Option>

### `ignore_cwd`

<Option
  cli_repr={`--[no-]ipython-ignore-cwd`}
  env_repr="PANTS_IPYTHON_IGNORE_CWD"
  default_repr={`True`}
>
  Whether to tell IPython not to put the CWD on the import path. Normally you
  want this to be True, so that imports come from the hermetic environment Pants
  creates. However IPython&lt;7.13.0 doesn&#x27;t support this option, so if
  you&#x27;re using an earlier version (e.g., because you have Python 2.7 code)
  then you will need to set this to False, and you may have issues with imports
  from your CWD shading the hermetic environment.
</Option>

## Deprecated options

### `interpreter_constraints`

<Option
  cli_repr={`--ipython-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_IPYTHON_INTERPRETER_CONSTRAINTS"
  default_repr={`[]`}
  removal_version="2.1.0.dev0"
  removal_hint={
    "This option no longer does anything, as Pants auto-configures the interpreter constraints for ipython based on your code's interpreter constraints."
  }
>
  Python interpreter constraints for this tool.
</Option>

</span>

